# ITMO_SPO

./: .gitignore  README.md
spo_lab15/: CMakeLists.txt
spo_lab15/src/: main.c
spo_lab15/src/client/: client.h  parser.c
spo_lab15/src/client/lexer/: lex.yy.c  lex.yy.h  sql_lexer.lex  sql_parser.yacc  y.tab.c  y.tab.h
spo_lab15/src/common/: utils.h
spo_lab15/src/server/: server.c
spo_lab3/: CMakeLists.txt  client.c  client.h  main.c  server.c  server.h  utils.c
spo_lab3/src/: ui.c  ui.h  utils.h
